Implement react-router-dom

--- a/libs/common-ui/src/lib/footer/footer.module.scss
+++ b/libs/common-ui/src/lib/footer/footer.module.scss
@@ -1,7 +1,5 @@
-/*
- * Replace this with your own classes
- *
- * e.g.
- * .container {
- * }
-*/
+@import "../../../../../apps/frontend/src/styles.scss";
+
+footer {
+    display: block;
+}
