--- a/libs/common-ui/src/lib/footer/footer.module.scss
+++ b/libs/common-ui/src/lib/footer/footer.module.scss
@@ -1,5 +1,9 @@
 @import "../../../../styles.scss";
 
-footer {
-    display: block;
+.footer-bs{
+    position: absolute;
+    width: 100%;
+    min-height: 320px;
+    bottom: 0;
+    left: 0;
 }
